--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://unpkg.com/bootstrap@4.3.1/dist/css/bootstrap.min.css');
+html, body {
+	width: 100%;
+	height: 100%;
+	font-family: 'Gamja Flower';
+	font-size: 28px;
+	color: #222;
+}
+
+.navbar {
+	background-color: rgba(82,64,120,0.9) !important;
+}
+.navbar li a {
+    color: white !important;
+}
